--- a/.travis.yml
+++ b/.travis.yml
@@ -17,7 +17,6 @@ install:
   - bin/buildout -N buildout:download-cache=downloads code-analysis:return-status-codes=True
 before_script:
 - export DISPLAY=:99.0
-- sh -e /etc/init.d/xvfb start
 - firefox -v
 script:
   - bin/code-analysis
@@ -30,3 +29,5 @@ after_success:
   - coveralls
 services:
   - xvfb
+addons:
+  firefox: latest
